<resources>
    <string name="app_name">MaiLeSeller</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit">再按一次退出程序</string>
    <string name="force_upgrade">此版本已不可用，下载新的版本</string>
    <string name="get_data_fail">数据获取失败，请稍后再试</string>
    <string name="login_title">登录</string>
    <string name="save_checkbox">保存账户</string>
    <string name="login_btn">登录</string>
    <string name="reset_btn">重置</string>
    <string name="loginName">账户:</string>
    <string name="password">密码:</string>
    <string name="remember_password">记住密码</string>
    <string name="hide_login">隐身登录</string>
    <string name="auto_login">自动登录</string>
    <string name="name">姓名:</string>
    <string name="depart">部门:</string>
    <string name="mobile_no">手机:</string>
    <string name="phone_no">固定电话:</string>
    <string name="add_avator">头像</string>
    <string name="email">邮箱:</string>
    <string name="login_emptyname_or_emptypwd">用户名或密码为空，请重新输入</string>
    <string name="login_successful">登录成功</string>
    <string name="login_fail">登录失败，请确认账户信息！</string>
    <string name="register">注册</string>
    <string name="reg_error_empty_form_message">信息没有填写完整哦（是不是用户名、密码或者邮箱没有填写？）</string>
    <string name="reg_error_psw_not_same">两次密码填写不一致</string>
    <string name="reg_success">注册成功，五秒后将返回登录界面</string>
    <string name="reg_fail">注册失败，请稍后再试</string>
    <string name="setting_about_description">用心服务，快速送达</string>
    <string name="all_rights_reserved">Copyright © 2011-2014 O2O. All Rights Reserved.</string>
    <string name="rob_order">抢单</string>
    <string name="setting_cate">设置销售品类</string>
    <string name="setting_local">设置抢单范围</string>
    <string name="has_order">已抢订单</string>
    <string name="new_order">新订单</string>
    <string name="refresh_order">刷新订单</string>
    <string name="address">地      址  ：</string>
    <string name="number">数      量  ：</string>
    <string name="price_one">单      价  ：</string>
    <string name="price_total">总      价  ：</string>
    <string name="product">产      品  ：</string>
    <string name="mobile_no_tag">手        机  :</string>
    <string name="setting_suc">设置成功！</string>
    <string name="setting_fail">设置失败！</string>
    <string name="order_num_digits">0123456789.</string>
    <string name="result_suc">找到了!</string>
    <string name="rob_suc">抢单成功!</string>
    <string name="result_time_tag">预计送达时间：</string>
    <string name="result_sellers_phone_tag">卖家电话：</string>
    <string name="result_sellers_bill_count_tag">成交单数：</string>
    <string name="result_sellers_speed_tag">送货速度：</string>
    <string name="result_sellers_quality_tag">产品质量：</string>
    <string name="result_sellers_service_tag">服务态度：</string>
    <string name="setting_cate_please">请设置抢单品类</string>
    <string name="i_want_seller">我要卖</string>
    <string name="select_ok">选好了</string>
    <string name="all_categroy">全部分类</string>
    <string name="already_min_categroy">已经是最小分类</string>
    <string name="categroy_level">级分类菜单</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="order_in_by_km">公里范围内的订单</string>
    <string name="unfinished_order">未完成订单</string>
    <string name="history_order">历史订单</string>
    <string name="my_order">我的订单</string>
    <string name="order_result">订单结果</string>
    <string name="order_detail">订单详情</string>
    <string name="get_fail">获取失败！</string>
    <string name="no_order">无订单数据</string>
    <string name="undelivered_order">待发货</string>
    <string name="finish_order">已完成</string>
    <string name="notify">消息</string>
    <string name="ic_access_alarms">&#xe000;</string>
    <string name="ic_access_time">&#xe001;</string>
    <string name="ic_accessibility">&#xe002;</string>
    <string name="ic_account_box">&#xe003;</string>
    <string name="ic_account_circle">&#xe004;</string>
    <string name="ic_adb">&#xe005;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_add_alarm">&#xe007;</string>
    <string name="ic_add_box">&#xe008;</string>
    <string name="ic_add_circle">&#xe009;</string>
    <string name="ic_add_circle_outline">&#xe00a;</string>
    <string name="ic_airplane_mode_off">&#xe00b;</string>
    <string name="ic_airplane_mode_on">&#xe00c;</string>
    <string name="ic_android">&#xe00d;</string>
    <string name="ic_apps">&#xe00e;</string>
    <string name="ic_archive">&#xe00f;</string>
    <string name="ic_arrow_back">&#xe010;</string>
    <string name="ic_arrow_drop_down">&#xe011;</string>
    <string name="ic_arrow_drop_down_circle">&#xe012;</string>
    <string name="ic_arrow_drop_up">&#xe013;</string>
    <string name="ic_arrow_forward">&#xe014;</string>
    <string name="ic_attachment">&#xe015;</string>
    <string name="ic_auto_fix">&#xe016;</string>
    <string name="ic_backspace">&#xe017;</string>
    <string name="ic_backup">&#xe018;</string>
    <string name="ic_beenhere">&#xe019;</string>
    <string name="ic_block">&#xe01a;</string>
    <string name="ic_bluetooth">&#xe01b;</string>
    <string name="ic_bluetooth_audio">&#xe01c;</string>
    <string name="ic_bluetooth_connected">&#xe01d;</string>
    <string name="ic_bluetooth_disabled">&#xe01e;</string>
    <string name="ic_bluetooth_searching">&#xe01f;</string>
    <string name="ic_bold">&#xe020;</string>
    <string name="ic_book">&#xe021;</string>
    <string name="ic_bookmark">&#xe022;</string>
    <string name="ic_bookmark_outline">&#xe023;</string>
    <string name="ic_brightness_auto">&#xe024;</string>
    <string name="ic_brightness_high">&#xe025;</string>
    <string name="ic_brightness_low">&#xe026;</string>
    <string name="ic_brightness_medium">&#xe027;</string>
    <string name="ic_bug_report">&#xe028;</string>
    <string name="ic_cake">&#xe029;</string>
    <string name="ic_call">&#xe02a;</string>
    <string name="ic_call_end">&#xe02b;</string>
    <string name="ic_call_made">&#xe02c;</string>
    <string name="ic_call_merge">&#xe02d;</string>
    <string name="ic_call_missed">&#xe02e;</string>
    <string name="ic_call_received">&#xe02f;</string>
    <string name="ic_call_split">&#xe030;</string>
    <string name="ic_camera">&#xe031;</string>
    <string name="ic_camera_alt">&#xe032;</string>
    <string name="ic_camera_roll">&#xe033;</string>
    <string name="ic_cancel">&#xe034;</string>
    <string name="ic_cast">&#xe035;</string>
    <string name="ic_cast_connected">&#xe036;</string>
    <string name="ic_chat">&#xe037;</string>
    <string name="ic_check">&#xe038;</string>
    <string name="ic_check_box">&#xe039;</string>
    <string name="ic_check_box_blank">&#xe03a;</string>
    <string name="ic_check_box_outline">&#xe03b;</string>
    <string name="ic_check_box_outline_blank">&#xe03c;</string>
    <string name="ic_check_circle">&#xe03d;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_check_circle_outline">&#xe03f;</string>
    <string name="ic_check_circle_outline_blank">&#xe040;</string>
    <string name="ic_chevron_left">&#xe041;</string>
    <string name="ic_chevron_right">&#xe042;</string>
    <string name="ic_chromecast">&#xe043;</string>
    <string name="ic_circles">&#xe044;</string>
    <string name="ic_circles_add">&#xe045;</string>
    <string name="ic_circles_extended">&#xe046;</string>
    <string name="ic_clear">&#xe047;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_close_caption">&#xe049;</string>
    <string name="ic_cloud">&#xe04a;</string>
    <string name="ic_cloud_circle">&#xe04b;</string>
    <string name="ic_cloud_done">&#xe04c;</string>
    <string name="ic_cloud_download">&#xe04d;</string>
    <string name="ic_cloud_off">&#xe04e;</string>
    <string name="ic_cloud_queue">&#xe04f;</string>
    <string name="ic_cloud_upload">&#xe050;</string>
    <string name="ic_comment">&#xe051;</string>
    <string name="ic_communities">&#xe052;</string>
    <string name="ic_content_copy">&#xe053;</string>
    <string name="ic_content_cut">&#xe054;</string>
    <string name="ic_content_paste">&#xe055;</string>
    <string name="ic_create">&#xe056;</string>
    <string name="ic_credit_card">&#xe057;</string>
    <string name="ic_crop">&#xe058;</string>
    <string name="ic_crop_free">&#xe059;</string>
    <string name="ic_crop_landscape">&#xe05a;</string>
    <string name="ic_crop_portrait">&#xe05b;</string>
    <string name="ic_crop_square">&#xe05c;</string>
    <string name="ic_data_usage">&#xe05d;</string>
    <string name="ic_delete">&#xe05e;</string>
    <string name="ic_developer_mode">&#xe05f;</string>
    <string name="ic_dialpad">&#xe060;</string>
    <string name="ic_directions">&#xe061;</string>
    <string name="ic_directions_bike">&#xe062;</string>
    <string name="ic_directions_bus">&#xe063;</string>
    <string name="ic_directions_car">&#xe064;</string>
    <string name="ic_directions_subway">&#xe065;</string>
    <string name="ic_directions_train">&#xe066;</string>
    <string name="ic_directions_transit">&#xe067;</string>
    <string name="ic_directionswalk">&#xe068;</string>
    <string name="ic_disc_full">&#xe069;</string>
    <string name="ic_do_not_disturb">&#xe06a;</string>
    <string name="ic_dock">&#xe06b;</string>
    <string name="ic_domain">&#xe06c;</string>
    <string name="ic_done">&#xe06d;</string>
    <string name="ic_done_all">&#xe06e;</string>
    <string name="ic_drafts">&#xe06f;</string>
    <string name="ic_drive">&#xe070;</string>
    <string name="ic_drive_apk">&#xe071;</string>
    <string name="ic_drive_audio">&#xe072;</string>
    <string name="ic_drive_code">&#xe073;</string>
    <string name="ic_drive_document">&#xe074;</string>
    <string name="ic_drive_drawing">&#xe075;</string>
    <string name="ic_drive_eta">&#xe076;</string>
    <string name="ic_drive_file">&#xe077;</string>
    <string name="ic_drive_font">&#xe078;</string>
    <string name="ic_drive_form">&#xe079;</string>
    <string name="ic_drive_fusiontable">&#xe07a;</string>
    <string name="ic_drive_image">&#xe07b;</string>
    <string name="ic_drive_ms_excel">&#xe07c;</string>
    <string name="ic_drive_ms_powerpoint">&#xe07d;</string>
    <string name="ic_drive_ms_word">&#xe07e;</string>
    <string name="ic_drive_pdf">&#xe07f;</string>
    <string name="ic_drive_presentation">&#xe080;</string>
    <string name="ic_drive_script">&#xe081;</string>
    <string name="ic_drive_site">&#xe082;</string>
    <string name="ic_drive_spreadsheet">&#xe083;</string>
    <string name="ic_drive_video">&#xe084;</string>
    <string name="ic_drive_zip">&#xe085;</string>
    <string name="ic_earth">&#xe086;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_error">&#xe088;</string>
    <string name="ic_event">&#xe089;</string>
    <string name="ic_exit_to_app">&#xe08a;</string>
    <string name="ic_expand_less">&#xe08b;</string>
    <string name="ic_expand_more">&#xe08c;</string>
    <string name="ic_explore">&#xe08d;</string>
    <string name="ic_extension">&#xe08e;</string>
    <string name="ic_fast_forward">&#xe08f;</string>
    <string name="ic_fast_rewind">&#xe090;</string>
    <string name="ic_favorite">&#xe091;</string>
    <string name="ic_favorite_outline">&#xe092;</string>
    <string name="ic_file_download">&#xe093;</string>
    <string name="ic_file_upload">&#xe094;</string>
    <string name="ic_filter">&#xe095;</string>
    <string name="ic_flag">&#xe096;</string>
    <string name="ic_flash_auto">&#xe097;</string>
    <string name="ic_flash_off">&#xe098;</string>
    <string name="ic_flash_on">&#xe099;</string>
    <string name="ic_flights">&#xe09a;</string>
    <string name="ic_flip_to_back">&#xe09b;</string>
    <string name="ic_flip_to_front">&#xe09c;</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="ic_folder_mydrive">&#xe09e;</string>
    <string name="ic_folder_shared">&#xe09f;</string>
    <string name="ic_forum">&#xe0a0;</string>
</resources>