<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEFF" >

    <RelativeLayout
        android:id="@+id/setloc_head_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_centerInParent="true"
            android:background="@drawable/title_bg_repeat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setting_local"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setloc_top_title_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setloc_head_rl"
        android:layout_marginTop="60dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >

        <TextView
            android:id="@+id/setloc_prefix_tag_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/search"
            android:textColor="@color/black_character_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/setloc_loc_range_et"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:layout_toRightOf="@+id/setloc_prefix_tag_tv"
            android:digits="@string/order_num_digits"
            android:textColor="@color/black_character_title"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/order_in_by_km"
            android:textColor="@color/black_character_title"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setloc_bottom_menu_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setloc_top_title_rl"
        android:paddingBottom="10dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="10dip" >

        <Button
            android:id="@+id/setloc_ok_btn"
            android:layout_width="120dip"
            android:layout_height="40dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_common_selector"
            android:text="@string/select_ok"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/setloc_cancel_btn"
            android:layout_width="120dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_common_selector"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>