<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEFF" >

    <RelativeLayout
        android:id="@+id/ro_head_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/loginhead"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_centerInParent="true"
            android:background="@drawable/title_bg_repeat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/login_reg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:padding="8dip"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ro_head_rl"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip" >

        <EditText
            android:id="@+id/login_username_et"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginTop="5.0dip"
            android:background="@anim/edit_text"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingBottom="6.0dip"
            android:paddingLeft="50.0dip"
            android:paddingRight="0dip"
            android:paddingTop="6.0dip"
            android:textColor="#ff333333"
            android:textSize="18.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="0dip"
            android:text="@string/loginName"
            android:textColor="#ff333333"
            android:textSize="16.0sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip" >

        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginTop="5.0dip"
            android:background="@anim/edit_text"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingBottom="6.0dip"
            android:paddingLeft="50.0dip"
            android:paddingRight="0dip"
            android:paddingTop="6.0dip"
            android:textColor="@color/black"
            android:textSize="18.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="0dip"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16.0sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_common_selector"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/login_remember_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dip"
        android:button="@drawable/btn_check"
        android:text="@string/remember_password"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/login_auto_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_remember_cb"
        android:layout_below="@+id/login_remember_cb"
        android:layout_marginTop="10dip"
        android:button="@drawable/btn_check"
        android:text="@string/auto_login"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/login_novisible_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_remember_cb"
        android:layout_below="@+id/login_auto_cb"
        android:layout_marginTop="10dip"
        android:button="@drawable/btn_check"
        android:text="@string/hide_login"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone" />

</RelativeLayout>