<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEFF" >

    <RelativeLayout
        android:id="@+id/setcate_head_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_centerInParent="true"
            android:background="@drawable/title_bg_repeat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setting_cate"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setcate_top_title_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setcate_head_rl"
        android:layout_marginTop="10dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >

        <TextView
            android:id="@+id/setcate_level_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/i_want_seller"
            android:textColor="@color/black_character_title"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setcate_bottom_menu_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="10dip" >

        <Button
            android:id="@+id/setcate_ok_btn"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_common_selector"
            android:text="@string/select_ok"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/setcate_all_categroy_btn"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_common_selector"
            android:text="@string/all_categroy"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/setcate_cancel_btn"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_common_selector"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/setcate_categroy_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setcate_bottom_menu_rl"
        android:layout_below="@+id/setcate_top_title_rl"
        android:layout_marginTop="10dip" >
    </ListView>

</RelativeLayout>