<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
      android:background="#EEEEFF" >

    <RelativeLayout
        android:id="@+id/ro_head_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_centerInParent="true"
            android:background="@drawable/title_bg_repeat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/rob_order"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ro_top_menu_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ro_head_rl"
        android:layout_marginTop="10dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >

        <Button
            android:id="@+id/ro_setting_cate_btn"
            android:layout_width="130dip"
            android:layout_height="40dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_common_selector"
            android:text="@string/setting_cate"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/ro_setting_local_btn"
            android:layout_width="130dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_common_selector"
            android:text="@string/setting_local"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ro_bottom_menu_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="10dip" >

        <Button
            android:id="@+id/ro_has_order_btn"
            android:layout_width="130dip"
            android:layout_height="40dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_common_selector"
            android:text="@string/has_order"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/ro_refresh_order_btn"
            android:layout_width="130dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_common_selector"
            android:text="@string/refresh_order"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/ro_order_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ro_bottom_menu_rl"
        android:layout_below="@+id/ro_top_menu_rl"
        android:layout_marginTop="10dip" >
    </ListView>

</RelativeLayout>